--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ main {
 main > div {
     background-color: hsl(0, 0%, 100%);
     flex-direction: column;
-    max-width: 90vw;
     margin: 1rem;
-    padding: 1.3rem;
+    padding: 1rem;
+    width: 300px;
 }
 
 img{
